	  of the statement
	* typeck.c (cb_validate_one), parser.y (check_not_88_level):
	  FR #339 msgid change for invalid references
	* typeck.c (cb_emit_string): added missing validation of delimiter
	  and source items, fixing bug #543
	* parser.y (check_not_88_level): invalidate wrong items to prevent
	  multiple errors for same field

2018-07-19  Simon Sobisch <simonsobisch@gnu.org>

	* scanner.l: allow floating-point literals containing no digit after
	  decimal point in significand (explicit specified in ACUCOBOL docs)
	* reserved.c, parser.y, field.c, tree.h: added parsing for VOLATILE clause
	* typeck.c (cb_build_expr): use correct line number for warning
	  "suggest parentheses around AND within OR"

2018-07-18  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y: adjusted length_of handling to distinguish constant-entry
	  from register

2018-07-18  Edward Hart <edward.dan.hart@gmail.com>

	* typeck.c: added checks for (RE)WRITE FILE f FROM literal (bug #411)
	* parser.y (file_control_entry): fixed regression caused when fixing
	  bug #405

2018-07-13  Simon Sobisch <simonsobisch@gnu.org>

	* reserved.c, parser.y: added IBM's ALLOCATE format by including the
	  ignored LOC phrase

2018-07-12  Ron Norman <rjn@inglenet.com>
	* parser.y: Set CB_CALL_BY_CONTENT for literal parameters
	* codegen.c: Make copy of fields for BY CONTENT & BY VALUE

2018-07-05  Ron Norman <rjn@inglenet.com>
	* config.def: Added 'depending-on-not-fixed'
	* codegen.c,tree.h: Made 'chk_field_variable_size' extern
	* typeck.c: Added code for 'depending-on-not-fixed'
	 which checks if a DEPENDING ON field is in a fixed location

2018-07-05  Ron Norman <rjn@inglenet.com>
	* parser.y,scanner.l: Removed LENGTH_OF as it is no longer used

	* parser.y, scanner.l: removed LENGTH_OF as it is no longer used

2018-07-04  Edward Hart <edward.dan.hart@gmail.com>

	* tree.c (cb_build_picture): fixed calculation of number of decimal
	  digits in PICs with floating +/- after decimal point, e.g. --.--.