@@ -149,9 +149,21 @@ accept-update:			no
 # except if WITH TAB clause is used
 accept-auto:			no
 
+
 # If yes, DISPLAYs and ACCEPTs are, by default, done on the CRT (i.e., using
 # curses).
 console-is-crt:			no
+
+# r2644: 
+# LENGTH OF occurs-fld (1) is always computed as just size of field
+# If yes, LENGTH OF occurs-fld is computed as size of field times OCCURS 
+# If no, LENGTH OF occurs-fld is computed as just size of field
+occurs-max-length-without-subscript: no
+
+# not-reserved:
+# Value: Word to be taken out of the reserved words list
+# (case independent)
+# Words that are in the (proposed) standard but may conflict
 
 # If yes, allow redefinition of the current program's name. This prevents its
 # use in a prototype-format CALL/CANCEL statement.
