@@ -134,6 +134,11 @@ accept-update:		no # not verified yet
 # except if WITH TAB clause is used
 accept-auto:		no # not verified yet
 
+# LENGTH OF occurs-fld (1) is always computed as just size of field
+# If yes, LENGTH OF occurs-fld is computed as size of field times OCCURS 
+# If no, LENGTH OF occurs-fld is computed as just size of field
+occurs-max-length-without-subscript: no
+
 # not-reserved:
 # Value: Word to be taken out of the reserved words list
 # -fill upon request-
